--- a/Pandas和数据帧.ipynb
+++ b/Pandas和数据帧.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
        "20"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +301,7 @@
        "2    Jim   13"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +328,7 @@
        "Name: Name, dtype: object"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +352,7 @@
        "Name: Name, dtype: object"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +423,7 @@
        "2    Jim   13  2020"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
@@ -547,7 +547,7 @@
        "3         Microsoft     41   MSFT"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {
     "scrolled": true
    },
@@ -680,7 +680,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -699,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -775,7 +775,7 @@
        "max    95.000000"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -787,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -828,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -860,9 +860,9 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>a</th>\n",
-       "      <td>-0.925937</td>\n",
-       "      <td>-0.090995</td>\n",
-       "      <td>-0.950357</td>\n",
+       "      <td>-0.159222</td>\n",
+       "      <td>-1.411017</td>\n",
+       "      <td>1.454112</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>b</th>\n",
@@ -872,9 +872,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>c</th>\n",
-       "      <td>-0.203333</td>\n",
-       "      <td>0.742877</td>\n",
-       "      <td>2.349025</td>\n",
+       "      <td>1.210108</td>\n",
+       "      <td>0.242917</td>\n",
+       "      <td>0.786402</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>d</th>\n",
@@ -884,15 +884,15 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>e</th>\n",
-       "      <td>0.085250</td>\n",
-       "      <td>-0.545293</td>\n",
-       "      <td>1.412742</td>\n",
+       "      <td>-0.774799</td>\n",
+       "      <td>-1.463119</td>\n",
+       "      <td>-1.528251</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>f</th>\n",
-       "      <td>0.583723</td>\n",
-       "      <td>0.071332</td>\n",
-       "      <td>0.352613</td>\n",
+       "      <td>1.062209</td>\n",
+       "      <td>1.182602</td>\n",
+       "      <td>-0.771568</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>g</th>\n",
@@ -902,9 +902,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>h</th>\n",
-       "      <td>0.410693</td>\n",
-       "      <td>-0.259710</td>\n",
-       "      <td>-0.932172</td>\n",
+       "      <td>1.526785</td>\n",
+       "      <td>0.299881</td>\n",
+       "      <td>1.525348</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -912,17 +912,17 @@
       ],
       "text/plain": [
        "        One       Two     Three\n",
-       "a -0.925937 -0.090995 -0.950357\n",
+       "a -0.159222 -1.411017  1.454112\n",
        "b       NaN       NaN       NaN\n",
-       "c -0.203333  0.742877  2.349025\n",
+       "c  1.210108  0.242917  0.786402\n",
        "d       NaN       NaN       NaN\n",
-       "e  0.085250 -0.545293  1.412742\n",
-       "f  0.583723  0.071332  0.352613\n",
+       "e -0.774799 -1.463119 -1.528251\n",
+       "f  1.062209  1.182602 -0.771568\n",
        "g       NaN       NaN       NaN\n",
-       "h  0.410693 -0.259710 -0.932172"
+       "h  1.526785  0.299881  1.525348"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -946,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -955,14 +955,17 @@
      "text": [
       "     One    Two  Three\n",
       "a  False  False  False\n",
+      "b   True   True   True\n",
       "c  False  False  False\n",
+      "d   True   True   True\n",
       "e  False  False  False\n",
       "f  False  False  False\n",
+      "g   True   True   True\n",
       "h  False  False  False\n",
       "Count if missing values:\n",
-      " One      0\n",
-      "Two      0\n",
-      "Three    0\n",
+      " One      3\n",
+      "Two      3\n",
+      "Three    3\n",
       "dtype: int64\n"
      ]
     }
@@ -983,7 +986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -991,11 +994,11 @@
      "output_type": "stream",
      "text": [
       "        One       Two     Three\n",
-      "a  0.706290  0.885459 -0.680925\n",
-      "c -0.541184  0.647782 -1.433530\n",
-      "e -0.968845  2.441104  0.170890\n",
-      "f -0.036662  0.908259  0.803572\n",
-      "h -1.226133 -1.549808 -1.772929\n"
+      "a  1.032503 -1.906586  0.035877\n",
+      "c  0.183757  0.755848 -0.716863\n",
+      "e -0.005347  1.263301  0.621241\n",
+      "f  0.573832 -0.680203 -0.207532\n",
+      "h  1.857959 -0.099415 -0.875876\n"
      ]
     }
    ],
@@ -1075,6 +1078,242 @@
     "# remove all columns with at least one missing value 需要重新运行df2\n",
     "column_with_na_dropped = df2.dropna(axis=1)\n",
     "column_with_na_dropped.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "基于列来删除NaN值可能有风险，因为如果每一列都有NaN值，则会丢失所有列。在这种情况下，基于行的dropna()方法比较有用。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "第二种处理缺失值的方法是用零、平均值、中间值或者单词填充。一起来看一看如何填充缺失的值"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>One</th>\n",
+       "      <th>Two</th>\n",
+       "      <th>Three</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>a</th>\n",
+       "      <td>-0.159222</td>\n",
+       "      <td>-1.411017</td>\n",
+       "      <td>1.454112</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>b</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>c</th>\n",
+       "      <td>1.210108</td>\n",
+       "      <td>0.242917</td>\n",
+       "      <td>0.786402</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>d</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>e</th>\n",
+       "      <td>-0.774799</td>\n",
+       "      <td>-1.463119</td>\n",
+       "      <td>-1.528251</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>f</th>\n",
+       "      <td>1.062209</td>\n",
+       "      <td>1.182602</td>\n",
+       "      <td>-0.771568</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>g</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>h</th>\n",
+       "      <td>1.526785</td>\n",
+       "      <td>0.299881</td>\n",
+       "      <td>1.525348</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        One       Two     Three\n",
+       "a -0.159222 -1.411017  1.454112\n",
+       "b  0.000000  0.000000  0.000000\n",
+       "c  1.210108  0.242917  0.786402\n",
+       "d  0.000000  0.000000  0.000000\n",
+       "e -0.774799 -1.463119 -1.528251\n",
+       "f  1.062209  1.182602 -0.771568\n",
+       "g  0.000000  0.000000  0.000000\n",
+       "h  1.526785  0.299881  1.525348"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# filling NaN with zeros\n",
+    "df3 = df2.fillna(0)\n",
+    "df3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>One</th>\n",
+       "      <th>Two</th>\n",
+       "      <th>Three</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>a</th>\n",
+       "      <td>-0.159222</td>\n",
+       "      <td>-1.411017</td>\n",
+       "      <td>1.454112</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>b</th>\n",
+       "      <td>1.210108</td>\n",
+       "      <td>0.242917</td>\n",
+       "      <td>0.786402</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>c</th>\n",
+       "      <td>1.210108</td>\n",
+       "      <td>0.242917</td>\n",
+       "      <td>0.786402</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>d</th>\n",
+       "      <td>-0.774799</td>\n",
+       "      <td>-1.463119</td>\n",
+       "      <td>-1.528251</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>e</th>\n",
+       "      <td>-0.774799</td>\n",
+       "      <td>-1.463119</td>\n",
+       "      <td>-1.528251</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>f</th>\n",
+       "      <td>1.062209</td>\n",
+       "      <td>1.182602</td>\n",
+       "      <td>-0.771568</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>g</th>\n",
+       "      <td>1.526785</td>\n",
+       "      <td>0.299881</td>\n",
+       "      <td>1.525348</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>h</th>\n",
+       "      <td>1.526785</td>\n",
+       "      <td>0.299881</td>\n",
+       "      <td>1.525348</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        One       Two     Three\n",
+       "a -0.159222 -1.411017  1.454112\n",
+       "b  1.210108  0.242917  0.786402\n",
+       "c  1.210108  0.242917  0.786402\n",
+       "d -0.774799 -1.463119 -1.528251\n",
+       "e -0.774799 -1.463119 -1.528251\n",
+       "f  1.062209  1.182602 -0.771568\n",
+       "g  1.526785  0.299881  1.525348\n",
+       "h  1.526785  0.299881  1.525348"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# replace all NA's the value that comes directly after it in the same column\n",
+    "# then replace all the remaining NA's with 0\n",
+    "df4 = df2.fillna(method = 'bfill',axis = 0).fillna(0)\n",
+    "df4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "我们使用Pandas数据帧的后向填充方法来填充缺失值。同样，也可以使用ffil（方法进行前向填充。"
    ]
   },
   {
